--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,37 @@
 @tailwind base;
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--secondary) var(--primary);
+}
+
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+  width: 0;
+  height: 0;
+  border-left: 16px solid #8B7E79;
+  border-top: 16px solid #8B7E79;
+  border-bottom: 16px solid transparent;
+  border-right: 16px solid transparent;
+}
+
 @tailwind components;
 @tailwind utilities;
